[package]
name = "dbsync"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["default-tls", "json"] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
tokio = { version = "1.42.0", features = ["full"] }
